feat(quadras): adicionar chave de busca por atributos (nome e endereco) mantendo busca por proximidade/cep
